--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -15,21 +15,21 @@
     <div class="col-lg-4" >
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 20%;"> MarketPlace </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>La ciudad es la capital de eventos mundiales como el Festival Iberoamericano de Teatro, el Festival Rock al Parque, Festival Estéreo Picnic.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro Marketplace es una <strong> tienda de tiendas. </strong> Es decir, una web de <strong> eCommerce </strong>  que proporciona espacio a otros vendedores para mostrar sus productos, exactamente somos el <strong>centro comercial offline</strong> de las tiendas físicas de barrio y todas sus categorias.</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
-      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://blog.dahoox.com/wp-content/uploads/2018/07/dahoox_lpomicrosite.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 16%;"> MicroSitio Web </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>También conocida como una ciudad creativa, declarada por la UNESCO como ciudad de la música, el Festival de Cine Independiente Indiebo, ArtBo, entre otros.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro microsite es una <strong> página separada e independiente </strong> de la website principal de CLUBSTORE que tiene su propia URL <strong>"ClubStore/EjemploTienda"</strong> y la utilizamos para promocionar a los <strong>Tenderos de Barrio,</strong>  a sus productos y servicios, para potenciar sus ventas e integrarlos a la era Digital.</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
-      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
-      <h2 style="margin-left: 20%; font-size: 2.5rem;"> Tienda Online </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Bogotá ofrece también lo mejor de las artes escénicas, plásticas, cinema, patrimonio arquitectónico, literatura, festivales y eventos masivos al aire libre.</p>
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://www.marketeroslatam.com/wp-content/uploads/2020/05/pagos-digitales-mundo-400x218.jpg" alt="culture1">
+      <h2 style="margin-left: 20%; font-size: 2.5rem;"> Pago Digital </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro sistema de pago electrónico <strong>permite proporcionar al tendero,</strong> un sistema de pago en línea, por medio de un computador, tableta o smartphone, y buscamos generar un  <strong> sistema eficiente y sencillo, </strong> que facilite la aceptación de pagos para las <strong>transacciones en línea</strong> a través de Internet.</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 </div>
@@ -41,23 +41,23 @@
 <div class="row container-fluid">
 
     <div class="col-lg-4">
-      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://www.cavsi.com/preguntasrespuestas/images/informatica/cuenta-de-usuario.png" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 9%;"> Activa tu Cuenta </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Fundada por Gonzalo Jiménez de Quesada y bautizada como Bacatá, fue Alexander Von Humbolt quien la denominó la "Atenas de América".</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Lo primero que debes hacer es ingresar a <strong> clubstore/contactanos </strong> deja tus datos en nuestro formulario adjunto, mientras damos respuesta <strong> "Imagina tu sitio Web"; </strong> revisa tu email y allí encontraras tu <strong> usuario y contraseña,</strong> ingresala y todo listo, ponte en disposición para crear tu tienda.</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
-      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://siemprendes.com/wp-content/uploads/2021/01/Mi-primera-Tienda-Online.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 15%;"> Crea tu Tienda </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Capital, cuyos habitantes más tradicionales se les reconoce con el gentilicio de cachacos y a los más jóvenes como rolos.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Ya que tienes tu cuenta activa, ingresa a <strong> clubstore/crearTienda </strong> ingresa las caracteristicas principales de <strong> tu tienda </strong> ¡ No Olvides Ningun Dato ! dale click en <strong> Guardar </strong> y listo !! tu tienda ha sido publicada, ahora solo espera <strong> a  tus clientes en nuesra Web </strong> y vende tus productos.</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
-      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
-      <h2 style="margin-left: 25%; font-size: 2.5rem;"> Vende tus Productos </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;> Bogotá fue designada como Capital Iberoamericana de la Cultura 2007, distinción otorgada por la UCCI (Unión de Ciudades Capitales de Iberoamérica).</p>
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://media.informabtl.com/wp-content/uploads/2015/07/Ventas-mediante-social-media.png" alt="culture1">
+      <h2 style="margin-left: 20%; font-size: 2.5rem;"> Vende Online </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Ahora que estas preparado y cuentas con un <strong> sitio Web para tu Tienda </strong> solo depende de que tengas un buen Stock para satisfacer a tus clientes y <strong> Venderles en tiempo real y Online </strong> ¡ Sin salir de casa ! ¡ Sin salir de tu Tienda ! .</p>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 </div>
