--- a/Frontend/src/app/components/contact/contact.component.html
+++ b/Frontend/src/app/components/contact/contact.component.html
@@ -26,6 +26,7 @@
               <label for="Solicitud" class="font-weight-light">Tipo de Solicitud</label>
               <select class="form-control">
                 <option></option>
+                <option>Quiero crear mi tienda on-line</option>
                 <option>Información</option>
                 <option>Sugerencia</option>
                 <option>Queja</option>
