--- a/Frontend/src/app/components/admin/admin.component.html
+++ b/Frontend/src/app/components/admin/admin.component.html
@@ -2,91 +2,58 @@
 <div class="container-fluid">
   <div class="row">
     <!-- Form-->
-    <div class="col-md-4">
-      <div class="card">
-        <div class="card-header">Administracion de productos</div>
+    <div class="mt-4 col-md-4">
+      <div class="shadow card">
+        <div class="card-header bg-dark text-light"><h3>Administracion de Tiendas</h3></div>
         <div class="card-body">
           <form #storeForm="ngForm">
             <div class="form-group d-flex flex-column">
-              <input
-                type="hidden"
-                id="_id"
-                name="_id"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore._id"
-                class="form-control"
-              />
+              <input type="hidden" id="_id" name="_id" #name="ngModel" [(ngModel)]="storeService.selectedStore._id"
+                class="form-control"/>
             </div>
             <div class="form-group d-flex flex-column">
-              <label for="name">Nombre</label>
-              <input
-                type="text"
-                id="name"
-                name="name"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.name"
-                class="form-control"
-              />
+              <label for="name">Nombre de Tienda</label>
+              <input type="text" id="name" name="name" #name="ngModel" [(ngModel)]="storeService.selectedStore.name"
+                class="form-control"/>
             </div>
             <div class="form-group d-flex flex-column">
-              <label for="phone">Telefono</label>
-              <input
-                type="text"
-                id="phone"
-                name="phone"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.phone"
-                class="form-control"
-              />
+              <label for="phone">Teléfono</label>
+              <input type="text" id="phone" name="phone" #name="ngModel" [(ngModel)]="storeService.selectedStore.phone"
+                class="form-control" />
             </div>
             <div class="form-group d-flex flex-column">
               <label for="location">Barrio</label>
-              <input
-                type="text"
-                id="location"
-                name="location"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.location"
-                class="form-control"
-              />
+              <input type="text" id="location" name="location" #name="ngModel"
+                [(ngModel)]="storeService.selectedStore.location" class="form-control" />
             </div>
             <div class="form-group d-flex flex-column">
-              <label for="category">Categoria</label>
-              <input
-                type="text"
-                id="category"
-                name="category"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.category"
-                class="form-control"
-              />
+              <label for="category">Categoría</label>
+              <select class="form-control" type="text" id="category" name="category" #name="ngModel"
+                [(ngModel)]="storeService.selectedStore.category" class="form-control">
+                <option></option>
+                <option>Restaurantes y Comidas</option>
+                <option>Farmacias y Servicios de Salud</option>
+                <option>Mini-mercados y Tenderos de Barrio</option>
+                <option>Bares y Licores</option>
+                <option>Papelería y Miscelánea</option>
+                <option>Fruver y Frigoríficos</option>
+                <option>Barbería, Spa y Belleza</option>
+                <option>Ferretería y Mecánica</option>
+                <option>Tecnología</option>
+                <option>Servicios para Mascotas</option>
+              </select>
             </div>
             <div class="form-group d-flex flex-column">
               <label for="information">Información</label>
-              <input
-                type="text"
-                id="information"
-                name="information"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.information"
-                class="form-control"
-              />
+              <input type="text" id="information" name="information" #name="ngModel"
+                [(ngModel)]="storeService.selectedStore.information" class="form-control" />
             </div>
             <div class="form-group d-flex flex-column">
               <label for="imgUrl">Url Imagen</label>
-              <input
-                type="text"
-                id="imgUrl"
-                name="imgUrl"
-                #name="ngModel"
-                [(ngModel)]="storeService.selectedStore.imgUrl"
-                class="form-control"
-              />
+              <input type="text" id="imgUrl" name="imgUrl" #name="ngModel"
+                [(ngModel)]="storeService.selectedStore.imgUrl" class="form-control" />
             </div>
-            <button
-              class="btn btn-success mx-2"
-              (click)="createStore(storeForm)"
-            >
+            <button class="btn btn-success mx-2" (click)="createStore(storeForm)">
               Guardar
             </button>
             <button class="btn btn-info mx-2" (click)="cleanForm(storeForm)">
@@ -97,7 +64,7 @@
       </div>
     </div>
     <!-- Tabla -->
-    <div class="col-md-8">
+    <div class="col-md-7">
       <table class="table table-striped">
         <thead>
           <th>Nombre</th>
@@ -123,16 +90,12 @@
             <td>{{ store.information }}</td>
             <!-- Buttons -->
             <td>
-              <a (click)="updateStore(store)" class="mx-2 btn btn-warning"
-                >Editar</a
-              >
-              <a (click)="deleteStore(store._id)" class="mx-2 btn btn-danger"
-                >Eliminar</a
-              >
+              <a (click)="updateStore(store)" class="mx-2 btn btn-warning">Editar</a>
+              <a (click)="deleteStore(store._id)" class="mx-2 btn btn-danger">Eliminar</a>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-</div>
-<app-footer></app-footer>
+  </div>
+  <app-footer></app-footer>
