--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Inicio Barra Navegacion-->
-<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+<nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
   <!--Imagen o logo-->
   <a class="navbar-brand" href="../home/home.component.html"
     ><img
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/store">Tiendas / </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin">Crear Tienda / </a>
+        <a class="nav-link" href="/admin"> Mi Perfil / </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/nosotros">Nosotros / </a>
