--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -3,9 +3,9 @@
 
 
 <div class="row row-fluid ml-3 mb-4 mt-4 mr-3">
-    <div class="column container col-sm-4 btn btn-warning"> ¿ Qué es ClubStore ? </div>
-    <div class="column container col-sm-4 btn btn-primary"> ¿ Cómo Funciona ? </div>
-    <div class="column container col-sm-4 btn btn-danger"> hola </div>
+    <div class="column container col-sm-4 btn btn-warning" style="font-size:1.5rem"> ¿ Qué es ClubStore ? </div>
+    <div class="column container col-sm-4 btn btn-primary" style="font-size:1.5rem; color: black;"> ¿ Cómo Funciona ? </div>
+    <div class="column container col-sm-4 btn btn-danger" style="font-size:1.5rem; color: black;"> ¡ Haz tu pedido en Linea ! </div>
 </div>
 
 <h1 style="text-align: center; margin-bottom: 4%; color: #ffc000; background-color: black; "> ¿ QUÉ ES CLUBSTORE ? </h1>
