--- a/Frontend/src/app/components/contact/contact.component.html
+++ b/Frontend/src/app/components/contact/contact.component.html
@@ -16,7 +16,7 @@
           <form action="/email" method="POST">
             <div class="form-group">
               <label class="font-weight-light">Nombres y Apellidos</label>
-              <input type="text" name="name" class="form-control" placeholder="Ingresa tu nombre" autofocus />
+              <input type="text" name="name" class="text-capitalize form-control" placeholder="Ingresa tu nombre" autofocus />
             </div>
             <div class="form-group">
               <label class="font-weight-light">Correo electrónico</label>
@@ -37,7 +37,7 @@
               <label for="text"></label>
               <textarea class="form-control" placeholder="Escribe aqui"></textarea>
             </div>
-            <button class="btn btn-dark btn-block">enviar</button>
+            <button (click)='send()' class="btn btn-dark btn-block">ENVIAR</button>
           </form>
         </div>
       </div>
