--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -16,21 +16,18 @@
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://vtex.com/wp-content/uploads/2019/03/marketplace-o-que-e-e-qual-sua-importancia.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 20%;"> MarketPlace </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro Marketplace es una <strong> tienda de tiendas. </strong> Es decir, una web de <strong> eCommerce </strong>  que proporciona espacio a otros vendedores para mostrar sus productos, exactamente somos el <strong>centro comercial offline</strong> de las tiendas físicas de barrio y todas sus categorias.</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://blog.dahoox.com/wp-content/uploads/2018/07/dahoox_lpomicrosite.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 16%;"> MicroSitio Web </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro microsite es una <strong> página separada e independiente </strong> de la website principal de CLUBSTORE que tiene su propia URL <strong>"ClubStore/EjemploTienda"</strong> y la utilizamos para promocionar a los <strong>Tenderos de Barrio,</strong>  a sus productos y servicios, para potenciar sus ventas e integrarlos a la era Digital.</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://www.marketeroslatam.com/wp-content/uploads/2020/05/pagos-digitales-mundo-400x218.jpg" alt="culture1">
       <h2 style="margin-left: 20%; font-size: 2.5rem;"> Pago Digital </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro sistema de pago electrónico <strong>permite proporcionar al tendero,</strong> un sistema de pago en línea, por medio de un computador, tableta o smartphone, y buscamos generar un  <strong> sistema eficiente y sencillo, </strong> que facilite la aceptación de pagos para las <strong>transacciones en línea</strong> a través de Internet.</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
     </div>
 </div>
 
@@ -44,21 +41,49 @@
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://www.cavsi.com/preguntasrespuestas/images/informatica/cuenta-de-usuario.png" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 9%;"> Activa tu Cuenta </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Lo primero que debes hacer es ingresar a <strong> clubstore/contactanos </strong> deja tus datos en nuestro formulario adjunto, mientras damos respuesta <strong> "Imagina tu sitio Web"; </strong> revisa tu email y allí encontraras tu <strong> usuario y contraseña,</strong> ingresala y todo listo, ponte en disposición para crear tu tienda.</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;" > Paso 1 &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://siemprendes.com/wp-content/uploads/2021/01/Mi-primera-Tienda-Online.jpg" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 15%;"> Crea tu Tienda </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Ya que tienes tu cuenta activa, ingresa a <strong> clubstore/crearTienda </strong> ingresa las caracteristicas principales de <strong> tu tienda </strong> ¡ No Olvides Ningun Dato ! dale click en <strong> Guardar </strong> y listo !! tu tienda ha sido publicada, ahora solo espera <strong> a  tus clientes en nuesra Web </strong> y vende tus productos.</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;"> Paso 2 &raquo;</a></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://media.informabtl.com/wp-content/uploads/2015/07/Ventas-mediante-social-media.png" alt="culture1">
       <h2 style="margin-left: 20%; font-size: 2.5rem;"> Vende Online </h2>
       <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Ahora que estas preparado y cuentas con un <strong> sitio Web para tu Tienda </strong> solo depende de que tengas un buen Stock para satisfacer a tus clientes y <strong> Venderles en tiempo real y Online </strong> ¡ Sin salir de casa ! ¡ Sin salir de tu Tienda ! .</p>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;">Conocer Mas... &raquo;</a></p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;><a class="btn btn-warning" href="#" style="margin-left: 30%;"> Paso 3 &raquo;</a></p>
+    </div>
+</div>
+
+<div style="margin-left: 0px; margin-top: 5px; border-top: black;"></div>
+
+<h1 style="text-align: center; margin-bottom: 4%; color: #ffc000; background-color: black; "> ¡ Haz tu pedido en Linea ! </h1>
+
+<div class="row container-fluid" style="margin-left: 0px; margin-top: 5px;">
+
+    <div class="col-lg-4" >
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://e7.pngegg.com/pngimages/499/512/png-clipart-qr-code-barcode-computer-icons-qr-codewebsite-text-logo.png" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 20%;"> Crea tu QR </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro Marketplace es una <strong> tienda de tiendas. </strong> Es decir, una web de <strong> eCommerce </strong>  que proporciona espacio a otros vendedores para mostrar sus productos, exactamente somos el <strong>centro comercial offline</strong> de las tiendas físicas de barrio y todas sus categorias.</p>
+      <p style="font-family: 'Ubuntu'; margin-left: 25%;"><button (click)="QR()" class="btn btn-warning" style="font-family: 'Ubuntu'; margin-left: 15%; font-size:1rem">¡ QR ! &raquo;</button></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://catalogosdigitalespreminens.files.wordpress.com/2015/08/logo-catalogo-online-045.png" alt="culture1">
+      <h2 style="font-size: 2.5rem; margin-left: 10%;"> Envia tu Catálogo </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro microsite es una <strong> página separada e independiente </strong> de la website principal de CLUBSTORE que tiene su propia URL <strong>"ClubStore/EjemploTienda"</strong> y la utilizamos para promocionar a los <strong>Tenderos de Barrio,</strong>  a sus productos y servicios, para potenciar sus ventas e integrarlos a la era Digital.</p>
+      <p style="font-family: 'Ubuntu'; margin-left: 25%;"><button (click)="QR()" class="btn btn-warning" style="font-family: 'Ubuntu'; margin-left: 15%; font-size:1rem">Descargar &raquo;</button></p>
+    </div>
+
+    <div class="col-lg-4">
+      <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://image.freepik.com/vector-gratis/restaurante-delivery-service-logo-design-template_7894-191.jpg" alt="culture1">
+      <h2 style="margin-left: 10%; font-size: 2.5rem;"> Genera tu pedido </h2>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro sistema de pago electrónico <strong>permite proporcionar al tendero,</strong> un sistema de pago en línea, por medio de un computador, tableta o smartphone, y buscamos generar un  <strong> sistema eficiente y sencillo, </strong> que facilite la aceptación de pagos para las <strong>transacciones en línea</strong> a través de Internet.</p>
+      <p style="font-family: 'Ubuntu'; margin-left: 25%;"><button (click)="QR()" class="btn btn-warning" style="font-family: 'Ubuntu'; margin-left: 30%; font-size:1rem">Domicilios &raquo;</button></p>
     </div>
 </div>
 
