--- a/Frontend/src/app/components/slider/slider.component.html
+++ b/Frontend/src/app/components/slider/slider.component.html
@@ -87,7 +87,7 @@
         letter-spacing: 0;
         text-shadow: -3px -3px 3px #00000e, 3px -3px 3px #000007, -3px 3px 3px #00000a, 3px 3px 3px #00000f;">Bares y Licores</h3>
         <p style="color:#ffc000; font-size:1.5rem; -webkit-text-fill-color:#ffc000;background: black;-webkit-text-stroke: 1px #ffc000;">
-          El exeso de alcohol es perjudicial para la salud "ley 30 de 1986"
+          El exceso de alcohol es perjudicial para la salud "ley 30 de 1986"
         </p>
       </div>
     </div>
