--- a/Frontend/src/app/components/footer/footer.component.html
+++ b/Frontend/src/app/components/footer/footer.component.html
@@ -66,7 +66,7 @@
             <!-- Email input -->
             <div class="form-outline form-white mb-4">
               <input type="email" id="form5Example2" class="form-control" />
-              <label class="form-label" for="form5Example2">Email address</label>
+              <label class="form-label" for="form5Example2">Correo electrónico</label>
             </div>
           </div>
           <!--Grid column-->
@@ -75,7 +75,7 @@
           <div class="col-auto">
             <!-- Submit button -->
             <button type="submit" class="btn btn-outline-warning mb-4">
-              Subscribe
+              Suscribirse
             </button>
           </div>
           <!--Grid column-->
