--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -33,12 +33,12 @@
     <form class="form-inline">
       <input
         class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
+        type="Buscador"
+        placeholder="Buscador"
+        aria-label="Buscador"
       />
       <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-        Search
+        Buscar
       </button>
     </form>
   </div>
