--- a/Frontend/src/app/components/slider/slider.component.html
+++ b/Frontend/src/app/components/slider/slider.component.html
@@ -6,7 +6,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://png.pngtree.com/png-clipart/20190520/original/pngtree-hand-painted-cartoon-store-store-with-awning-in-front-paintedcartoonawningstorestorego-out-png-image_4054224.jpg"
+      <img src="https://scontent.fbog4-1.fna.fbcdn.net/v/t1.6435-9/183968767_10159052187878280_3692238997495339133_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=730e14&_nc_eui2=AeFAXumH1LuY1Akk0piPuGiQ-XSqwGUcXW35dKrAZRxdban9NuWhq9XPWwDnGKdSpXA&_nc_ohc=pOvZV9rOH1MAX_B_AU3&_nc_ht=scontent.fbog4-1.fna&oh=4afd122f4ff0fcd74629131b7d3fef4e&oe=60BDC7FF"
         style="margin-left: 9%; margin-right: 1%" class="d-block w-100" alt="..." width="80" />
       <div class="carousel-caption d-none d-md-block">
         <h4 style="margin-left: 10%; font-size:3rem; text-align:center;
@@ -76,7 +76,7 @@
     </div>
     <div class="carousel-item">
       <img
-        src="https://lh3.googleusercontent.com/proxy/lYI-cIAfY05ox9k9p7A2PTW1T94Ik1S0piAoJy7yZPn_-RYnuI3n-P03YbKbJDqAObwXP54F4guKjXmUkjz_erzEI7KJsnioUzplbhPRwiEaduXr-ITNOk7cFaeMu2-xvlpitSuQY3Y5w8cMygDHuCGgw2B3F4XxWfbZ_i8B7iclkh1qCA"
+        src="https://lh3.googleusercontent.com/proxy/NksOLcCuHbzqFJPzuYCxfk3kCImkPUJsum-WGT9btt50C8NdDGb8eKVmpiT1Bf9xQQbTHcD6Eh-DmYMi2i3mTYoF-QwRL1yYBUhdw-_jvJGDR6qpxr2_UBYGKbvn8bHMJnTKzWTwDORuiGwWgwqR6jR9nFZtMwQGf2XGyHZ0-Qodzl7zDw"
         class="d-block w-100" alt="..." width="100" />
       <div class="carousel-caption d-none d-md-block">
         <h3 style="margin-left: 10%; font-size:3rem; text-align:center;
@@ -110,7 +110,7 @@
     </div>
     <div class="carousel-item">
       <img
-        src="https://lh3.googleusercontent.com/proxy/rHXiRKkPY9s_Mx-JjC0Qi0b21mzJhFPvf5gtB1t5fG8r6-GPGu526uD2JAMl8RD1bEfUYqs6NjYgWDNhQc-zU9EqOFMq14p_txYZbbDFxC_60nE7RpZ1bw9e_QYtPZbG7g5WQ7psT75N0oRd09wVSz2A8FxCiA"
+        src="https://lh3.googleusercontent.com/proxy/teaQ-f1IxtpQIN4JwlqdyZjtX4glwtEU9qDG56fBP3IG6bxmS8fn_218R1Pa9VpJ5TqaFR7-NIeDHq8yIG0lzuIxt7IcFbNwq5cb-utwFt9xr9dsQWhHRqA_qeMsD01lNRrzRzrXfAx9BLneXQE9ozfwJI-bqw"
         class="d-block w-100" alt="..." width="100" />
       <div class="carousel-caption d-none d-md-block">
         <h3 style="margin-left: 10%; font-size:3rem; text-align:center;
