Alerta boton suscribirse footer

--- a/Frontend/src/app/components/footer/footer.component.html
+++ b/Frontend/src/app/components/footer/footer.component.html
@@ -74,7 +74,7 @@
           <!--Grid column-->
           <div class="col-auto">
             <!-- Submit button -->
-            <button type="submit" class="btn btn-outline-warning mb-4">
+            <button type="submit" class="btn btn-outline-warning mb-4" (click)="suscribirse()" >
               Suscribirse
             </button>
           </div>
