agregar alert a buscar

--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -37,9 +37,7 @@
         placeholder="Buscador"
         aria-label="Buscador"
       />
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-        Buscar
-      </button>
+      <div (click)="BR()" class="mx-auto btn btn-dark">BUSCAR</div>
     </form>
   </div>
 </nav>
