--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -68,21 +68,21 @@
     <div class="col-lg-4" >
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://e7.pngegg.com/pngimages/499/512/png-clipart-qr-code-barcode-computer-icons-qr-codewebsite-text-logo.png" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 20%;"> Crea tu QR </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro Marketplace es una <strong> tienda de tiendas. </strong> Es decir, una web de <strong> eCommerce </strong>  que proporciona espacio a otros vendedores para mostrar sus productos, exactamente somos el <strong>centro comercial offline</strong> de las tiendas físicas de barrio y todas sus categorias.</p>
-      <p style="font-family: 'Ubuntu'; margin-left: 25%;"><button (click)="QR()" class="btn btn-warning mt-4" style="font-family: 'Ubuntu'; margin-left: 15%; font-size:1rem">¡ QR ! &raquo;</button></p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro Marketplace proporciona un Codigo Digital ó <strong> Codigo QR </strong> Para digitalizar el <strong> Menú </strong>  que proporciona cada tienda o negocio. una vez creado <strong> comparte con tus clientes. </strong> Tambien puedes imprimir y pegar en tu tienda fisica y ya !! estas a un click !! de vender !!</p>
+      <p style="font-family: 'Ubuntu'; margin-left: 25%;"><button (click)="QR()" class="btn btn-warning mt-1" style="font-family: 'Ubuntu'; margin-left: 15%; font-size:1rem">¡ QR ! &raquo;</button></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://catalogosdigitalespreminens.files.wordpress.com/2015/08/logo-catalogo-online-045.png" alt="culture1">
       <h2 style="font-size: 2.5rem; margin-left: 10%;"> Envia tu Catálogo </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro microsite es una <strong> página separada e independiente </strong> de la website principal de CLUBSTORE que tiene su propia URL <strong>"ClubStore/EjemploTienda"</strong> y la utilizamos para promocionar a los <strong>Tenderos de Barrio,</strong>  a sus productos y servicios, para potenciar sus ventas e integrarlos a la era Digital.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;> Ya estas en la capacidad de <strong> enviar tu menú </strong> un catalogo digital te permite llegar de manera agil y sencilla a tu nuevos cleintes <strong> y digitalizar a los viejos ! </strong> contruye todo con precios y caracteristicas para poder  <strong> Generar pedidos </strong>  de tus productos y servicios.</p>
       <p style="font-family: 'Ubuntu'; margin-left: 20%;"><button (click)="QR()" class="btn btn-warning" style="font-family: 'Ubuntu'; margin-left: 15%; font-size:1rem">Descargar &raquo;</button></p>
     </div>
 
     <div class="col-lg-4">
       <img class= "culture1 bd-placeholder-img rounded-circle" style="margin-left: 30%;" width="140" height="140" focusable="false" src="https://image.freepik.com/vector-gratis/restaurante-delivery-service-logo-design-template_7894-191.jpg" alt="culture1">
       <h2 style="margin-left: 10%; font-size: 2.5rem;"> Genera tu pedido </h2>
-      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro sistema de pago electrónico <strong>permite proporcionar al tendero,</strong> un sistema de pago en línea, por medio de un computador, tableta o smartphone, y buscamos generar un  <strong> sistema eficiente y sencillo, </strong> que facilite la aceptación de pagos para las <strong>transacciones en línea</strong> a través de Internet.</p>
+      <p style="font-family: 'Ubuntu'" style=font-size:1rem;>Nuestro servicio Delivery <strong> aumentara sus ventas </strong> con un robusto sistema de domicilios que entrega una propuesta de valor única <strong> "-30" y prometemos entrgar tu pedido en tiempo record </strong> y claro con domicilios al <strong> mejor precio </strong> gracias a nuestra estrategia de bajo costo.</p>
       <p style="font-family: 'Ubuntu'; margin-left: 10%;"><button (click)="QR()" class="btn btn-warning" style="font-family: 'Ubuntu'; margin-left: 30%; font-size:1rem">Domicilios &raquo;</button></p>
     </div>
 </div>
